--- a/website/content/index.html
+++ b/website/content/index.html
@@ -18,7 +18,7 @@ XML tags and Python objects and lets you capture that as cleanly as possible.
 You write some simple class definitions to define your models and their
 attributes, and dexml handles the round-tripping to and from XML.</p>
 
-<p>To get started, check out the comprehensive <a href="./tutorial.html">tutorial</a>, the <a href="./faq.html">FAQ</a>, or the auto-generated <a href="./api/dexml.html">API listing</a>.<br />
+<p>To get started, check out the unfortunately-still-a-work-in-progress <a href="./tutorial.html">tutorial</a>, the <a href="./faq.html">FAQ</a>, or the auto-generated <a href="./api/index.html">API listing</a>.<br />
 Or if you just want to get up and running in a hurry, here's a quick sample of dexml in action:</p>
 
 {% syntax python %}
